add logo location to configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: FAIR Data Tools
 description: Tools developed to use in FAIRification process
+logo: /assets/img/logo.png
